Fix table on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -778,8 +778,7 @@ nav ul li:first-child {
 .wheel {
   text-align: center;
   /* position: absolute;
-  bottom: 0;
-  left: 50%; */
+  bottom: 0; left: 50%; */
   margin-bottom: 20px
 }
 
@@ -796,4 +795,13 @@ nav ul li:first-child {
 
 .wheel ul li {
   display: inline
+}
+
+#agile-words p {
+  margin: 0;
+  padding: 0
+}
+
+#agile-words [class^="col-"] {
+  margin-bottom: 30px;
 }
